# courseapp

./: .gitignore  HOWTO.md  README.md  pyproject.toml
courseapp/: cli.py  engine.py  scaffold.py
courseapp/templates/public/: README.md  deploy.yml  gitignore  mkdocs.yml  requirements.txt
courseapp/templates/vault/: gitignore  index.md  jupytext.toml  vault-requirements.txt
