[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "courseapp"
version = "0.2.0"
description = "A system-installed, decoupled private-to-public MkDocs site generator for course sites."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-roamlinks-plugin>=0.1.3",
    "pymdown-extensions>=10.2",
    "PyYAML>=6.0",
]

[project.scripts]
courseapp = "courseapp.cli:main"

[tool.setuptools]
packages = ["courseapp"]

[tool.setuptools.package-data]
courseapp = ["templates/**/*"]
